--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 		<header>
 			<div class="wrapper">
 				<section class="top-bar">
-					<div class="logo"><a href="{{ site.baseurl }}/"><img src="{{site.logo}}" width=60 height=30 alt="Logo" style="width: 100px;
+					<div class="logo"><a href="{{ site.baseurl }}/"><img src="{{site.logo | relative_url}}" width=60 height=30 alt="Logo" style="width: 100px;
 						height: 48px;"></a></div>
 					{% include navigation.html %}
 				</section>
