--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,8 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 		{% endif %}
-
+		<meta property="og:image" content="{{site.logo | relative_url}}">
+		{% seo %}
 
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
