--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -9,7 +9,7 @@
 	display: flex;
 	flex-wrap:wrap;
 	flex-direction:row;
-	justify-content:flex-start;
+	justify-content:space-around;
 	align-items:stretch;
 	font-size: .9em;
 
@@ -21,21 +21,25 @@
 }
 
 .category {
-	flex: 0 0 100%;
+	flex: 0 0 98%;
 	overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
-
+	white-space: nowrap;
+	padding:5px;
+	border-radius:3px;
+	background-color:whitesmoke;
+	box-shadow: 0 6px 6px -6px rgba(0, 0, 0, .2);
 	h3 {
 		text-transform:capitalize;
+		text-align: center;
 	}
 
 	@media #{$mid-point} {
-		flex: 0 0 50%;
+		flex: 0 0 48%;
 	}
 
 	@media #{$desktop} {
-		flex: 0 0 50%;
+		flex: 0 0 48%;
 	}
 	margin: 0 0 30px 0;
 
@@ -141,8 +145,8 @@ margin: 0 5%
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	display: flex;
-	flex-flow: wrap;
+	// display: flex;
+	// flex-flow: wrap;
 
 	li {
 		margin: 10px 0;
@@ -196,6 +200,8 @@ margin: 0 5%
 				width: 40px;
 				height: 40px;
 			}
+			font-weight: bold;
+			color: $link-hover-color;
 		}
 
 		p {
@@ -399,4 +405,8 @@ margin: 0 5%
 }
 #full-tags-list .tag-entry {
 	margin: 0 0 15px 25px;
+}
+.nav-toggle:hover{
+color:white;
+text-decoration: none
 }
