--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -27,7 +27,7 @@
 	white-space: nowrap;
 	padding:5px;
 	border-radius:3px;
-	background-color:whitesmoke;
+	background-color:lavender;
 	box-shadow: 0 6px 6px -6px rgba(0, 0, 0, .2);
 	h3 {
 		text-transform:capitalize;
