--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,9 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 		{% endif %}
+		
 		{% seo %}
+		{% feed_meta %}
 
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
