--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,65 +15,78 @@ layout: default
 		<h1>{{ page.title }}</h1>
 
 		{% if page.type == "Video" %}
-			{% include youtube.html video_id=page.video_id %}
+		{% include youtube.html video_id=page.video_id %}
 
-			{% if page.resources %}
-				<div class="resources">
-					<ul>
-						{% for resource in page.resources %}
-							<li><a href="{{ resource.link }}">{{ resource.name }}</a></li>
-						{% endfor %}
-					</ul>
-				</div>
-			{% endif %}
+		{% if page.resources %}
+		<div class="resources">
+			<ul>
+				{% for resource in page.resources %}
+				<li><a href="{{ resource.link }}">{{ resource.name }}</a></li>
+				{% endfor %}
+			</ul>
+		</div>
 		{% endif %}
-		
+		{% endif %}
+
 		<div class="tutorial-main">
 			{{ content }}
 		</div>
 		<div class="tutorial-share">
-			<a class="modalOpen no-smooth" href="#subscribe">{% include social-icon.html icon="Email" %} Subscribe</a>
+			<!-- <a class="modalOpen no-smooth" href="#subscribe">{% include social-icon.html icon="Email" %} Subscribe</a> -->
 			<a class="modalOpen no-smooth" href="#share">{% include social-icon.html icon="Share" %} Share</a>
+			{% if page.tags.size > 0 %}
+			<div class="blog-tags">
+				Tags:
+				{% if site.link-tags %}
+				{% for tag in page.tags %}
+				<a href="{{ '/tags' | relative_url }}#{{- tag -}}">{{- tag -}}</a>
+				{% endfor %}
+				{% else %}
+				{{ page.tags | join: ", " }}
+				{% endif %}
+			</div>
+			{% endif %}
 		</div>
 	</section>
 </section>
 
 {% if page.set %}
-	{% assign set_file_name = "_sets/" | append: page.set | append: ".md" %}
-	{% assign set = site.sets | where: "path", set_file_name | first %}
-	{% assign series_posts = site.posts | where: "set", page.set %}
-	<div class="tutorial-series">
-		<h3>{{ set.title }} - Series</h3>
-		<p>{{ set.description }}</p>
+{% assign set_file_name = "_sets/" | append: page.set | append: ".md" %}
+{% assign set = site.sets | where: "path", set_file_name | first %}
+{% assign series_posts = site.posts | where: "set", page.set %}
+<div class="tutorial-series">
+	<h3>{{ set.title }} - Series</h3>
+	<p>{{ set.description }}</p>
 
-		{% include listings.html listings=series_posts numbered=true%}
-	</div>
+	{% include listings.html listings=series_posts numbered=true%}
+</div>
 {% endif %}
 {% assign related_posts = site.related_posts %}
 {% assign related_posts_size = related_posts | size %}
 {% if related_posts_size > 0 %}
-	<div class="related">
-		<h3>Related tutorials</h3>
-		{% include listings.html listings=site.related_posts %}
-	</div>
+<div class="related">
+	<h3>Related tutorials</h3>
+	{% include listings.html listings=site.related_posts %}
+</div>
 {% endif %}
 
 {% if site.disqus_shortname and page.comments %}
-	<div id="disqus_thread"></div>
-	<script>
-		var disqus_shortname = '{{ site.disqus_shortname }}';
-		var disqus_config = function () {
-			this.page.url = "{{ page.url | prepend: site.url }}";
-			this.page.identifier = "{{ page.id }}";
-		};
-		(function() {  // DON'T EDIT BELOW THIS LINE
-			var d = document, s = d.createElement('script');
-			s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-			s.setAttribute('data-timestamp', +new Date());
-			(d.head || d.body).appendChild(s);
-		})();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<div id="disqus_thread"></div>
+<script>
+	var disqus_shortname = '{{ site.disqus_shortname }}';
+	var disqus_config = function () {
+		this.page.url = "{{ page.url | prepend: site.url }}";
+		this.page.identifier = "{{ page.id }}";
+	};
+	(function () {  // DON'T EDIT BELOW THIS LINE
+		var d = document, s = d.createElement('script');
+		s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+		s.setAttribute('data-timestamp', +new Date());
+		(d.head || d.body).appendChild(s);
+	})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments
+		powered by Disqus.</a></noscript>
 {% endif %}
 
 <div id="subscribe" class="modalDialog">
@@ -94,10 +107,18 @@ layout: default
 		<h2>Share</h2>
 		<p>Share this tutorial with your community.</p>
 		<ul>
-			<li><a class="twitter" target="_blank" href="https://twitter.com/intent/tweet?url={{ page.url | prepend: site.url | cgi_escape }}">{% include social-icon.html icon="Twitter" %} Twitter</a></li>
-			<li><a class="facebook" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | prepend: site.url | cgi_escape }}">{% include social-icon.html icon="Facebook2" %} Facebook</a></li>
-			<li><a class="google-plus" target="_blank" href="https://plus.google.com/share?url={{ page.url | prepend: site.url | cgi_escape }}">{% include social-icon.html icon="Google Plus" %} Google+</a></li>
-			<li><a class="hacker-news" target="_blank" href="http://news.ycombinator.com/submitlink?u={{ page.url | prepend: site.url | cgi_escape }}&t={{ page.title | cgi_escape | replace: "+", "%20" }}">{% include social-icon.html icon="Hacker News" %} Hacker News</a></li>
+			<li><a class="twitter" target="_blank"
+					href="https://twitter.com/intent/tweet?url={{ page.url | prepend: site.url | cgi_escape }}">{% include social-icon.html icon="Twitter" %}
+					Twitter</a></li>
+			<li><a class="facebook" target="_blank"
+					href="https://www.facebook.com/sharer/sharer.php?u={{ page.url | prepend: site.url | cgi_escape }}">{% include social-icon.html icon="Facebook2" %}
+					Facebook</a></li>
+			<li><a class="google-plus" target="_blank"
+					href="https://plus.google.com/share?url={{ page.url | prepend: site.url | cgi_escape }}">{% include social-icon.html icon="Google Plus" %}
+					Google+</a></li>
+			<li><a class="hacker-news" target="_blank"
+					href="http://news.ycombinator.com/submitlink?u={{ page.url | prepend: site.url | cgi_escape }}&t={{ page.title | cgi_escape | replace: "+", "%20" }}">{% include social-icon.html icon="Hacker News" %}
+					Hacker News</a></li>
 		</ul>
 	</div>
 </div>
@@ -115,26 +136,26 @@ layout: default
 		headings[i].appendChild(anchorLink);
 	}
 
-	$(".modalOpen").click(function() {
+	$(".modalOpen").click(function () {
 		var id = $(this).attr("href");
 		$(id).addClass("show");
 
-		$(window).click(function() {
+		$(window).click(function () {
 			$(".show").removeClass("show");
 		});
 
-		$(id + " > div").click(function(event){
+		$(id + " > div").click(function (event) {
 			event.stopPropagation();
 		});
 		return false;
 	});
 
-	$(".close").click(function() {
+	$(".close").click(function () {
 		$(".show").removeClass("show");
 		return false;
 	});
 
-	$(document).keyup(function(e) {
+	$(document).keyup(function (e) {
 		if (e.keyCode == 27) {
 			$(".show").removeClass("show");
 		}
