--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -57,6 +57,10 @@ h1 {
 .tutorial-content h1 {
 	font-size: 4.5rem;
 	margin: 0 0 .7em 0;
+		color:$link-hover-color;
+		text-align: center;
+		font-size: 4rem;
+		font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
 h2 {
