--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
 					{{ link.name }}</a></li>
 			{% endfor %}
 		</ul>
-		<p class="copyright">&copy; {{ site.title }} {{ site.time | date: "%Y" }}. All rights reserved.</p>
+		<p class="copyright">&copy; {{ site.title }} {{ site.time | date: "%Y" }}. All rights reserved.<a class="copyright" href="https://www.jijitechnologies.com/privacy-policy.aspx" class="fsize11" style="color:#A94545">Privacy Policy</a></p>
 	</div>
 </footer>
