--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,8 +48,7 @@
 					{% include navigation.html %}
 				</section>
 				<section class="hero_search">
-					<h1>{{site.title}}</h1>
-					<p>How can we help you today?</p>
+					<h1>How can we help you today?</h1>
 					{% include search.html %}
 				</section>
 			</div>
