--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,11 +29,12 @@ layout: default
 		{% endif %}
 
 		<div class="tutorial-main">
+				<a class="modalOpen no-smooth share" href="#share">{% include social-icon.html icon="Share" %}</a>
 			{{ content }}
 		</div>
 		<div class="tutorial-share">
 			<!-- <a class="modalOpen no-smooth" href="#subscribe">{% include social-icon.html icon="Email" %} Subscribe</a> -->
-			<a class="modalOpen no-smooth" href="#share">{% include social-icon.html icon="Share" %} Share</a>
+			<!-- <a class="modalOpen no-smooth" href="#share">{% include social-icon.html icon="Share" %} Share</a> -->
 			{% if page.tags.size > 0 %}
 			<div class="blog-tags">
 				Tags:
@@ -65,7 +66,7 @@ layout: default
 {% assign related_posts_size = related_posts | size %}
 {% if related_posts_size > 0 %}
 <div class="related">
-	<h3>Related tutorials</h3>
+	<h3>Related articles</h3>
 	{% include listings.html listings=site.related_posts %}
 </div>
 {% endif %}
