--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -2,7 +2,9 @@
 	// .show_hero_search header nav form {
 	// 	display: none;
 	// }
-
+nav a.headIcons{
+	float:left;
+}
 	.show_hero_search .hero_search {
 		display: block;
 	}
@@ -51,7 +53,9 @@ header {
 			flex: 1;
 			margin: 0 0 0 10px;
 			display: block;
-
+			.headIcons{
+				float:right;
+			}
 			form {
 				position: absolute;
 				right: 25px;
@@ -128,7 +132,7 @@ header {
 	// display: none;
 	text-align: center;
 	flex: 0 0 100%;
-	padding: 60px 0 30px 0;
+	padding: 30px 0 30px 0;
 
 	form {
 		position: relative;
