--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -2,7 +2,7 @@
 	// max-width: 900px;
 	// margin: 0 auto;
 	// padding: 0 30px;
-	margin:0 30px;
+	margin:0 4%;
 	position: relative;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .content {
-	background: whitesmoke;
+	background: white;
 	padding: 30px 0;
 }
 
