--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,6 +7,6 @@
 		{% endif %}
 		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}">{{ link.name }}</a>
 	{% endfor %}
-	<a href="#" class="headIcons"><img src="{{'assets/images/yammer.png' }}" height=40 width=40></a>
-	<a href="#" class="headIcons"><img src="{{'assets/images/emailicon.png'}}" height=40 width=40></a>
+	<a href="#" class="headIcons"><img src="assets/images/yammer.png" height=40 width=40></a>
+	<a href="#" class="headIcons"><img src="assets/images/emailicon.png" height=40 width=40></a>
 </nav>
