--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+<!-- <iframe src="https://www.jijitechnologies.com/footer.aspx" frameborder="0" scrolling="no" height="100%" width="100%"
+></iframe> -->
 <footer>
 	<div class="wrapper">
 		<p class="edit-footer"><a class="editor-link btn" href="cloudcannon:collections/_data/footer.yml" class="btn" style="padding: 5px;"><strong>&#9998;</strong> Edit footer</a></p>
