--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,9 @@
 		</section>
 
 		{% include footer.html %}
-		<script>
+<script src="{{ site.baseurl }}/js/lunr.min.js"></script>
+		<script src="{{ site.baseurl }}/js/search.js"></script>
+<script>
 			$(function() {
 				$('a[href*=\\#]').not(".no-smooth").on('click', function(event){
 					var el = $(this.hash);
