--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -92,7 +92,7 @@ header {
 				display: inline-block;
 				padding: 7px 0;
 				margin: 0 15px;
-				border-bottom: 2px solid rgba(255, 255, 255, 0)
+				// border-bottom: 2px solid rgba(255, 255, 255, 0)
 			}
 
 			&.active, &.active:hover {
@@ -103,7 +103,7 @@ header {
 				text-decoration: none;
 				color: #fff;
 				@media #{$mid-point} {
-					border-bottom-color: rgba(255, 255, 255, .1);
+					// border-bottom-color: rgba(255, 255, 255, .1);
 				}
 			}
 		}
