--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -328,6 +328,7 @@ margin: 0 5%
 
 .related, .tutorial-series {
 	margin: 3% 5%;
+	font-size:medium;
 	ul {
 		padding: 0;
 		margin: 0;
@@ -415,7 +416,6 @@ margin: 0 5%
 
 .nav-toggle:hover{
 color:white;
-text-decoration: none
 }
 
 .blog-tags {
@@ -441,8 +441,15 @@ text-decoration: none
   }
   #full-tags-list {
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	.post-list{
+		margin-bottom:2%;
+		line-height: 2;
+	}
 	.tag-entry {
 		margin-left: 47px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 		a {
 			font-size: 20px;
 		  }
@@ -467,4 +474,27 @@ text-decoration: none
     float: right;
     position: absolute;
 	right: 0;
+}
+.autocomplete-items{
+	position: absolute;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    left: 0;
+    right: 0;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2), 0 0 0 3px rgba(0,0,0,0.08);
+    padding: 1% 0;
+    background-color: white;
+    border: 1px solid antiquewhite;
+	margin: 0 2%;
+	div{
+		text-align: left;
+   	 	padding: 10px;
+    	cursor: pointer;
+    	background-color: white;
+    	border-bottom: 1px solid #d4d4d4;
+    	color: black;
+	}
 }
